# lms

./: .gitignore  FUNCTIONAL_REQUIREMENTS.md  MIGRATION_TO_PGVECTOR.md  PROJECT_SETUP_COMPLETE.md  RAG_IMPLEMENTATION_SUMMARY.md  README.md  README_OLD.md  docker-compose.db.yml  package-lock.json  package.json
ai-services/: .env.example  CONFIG_GUIDE.md  README.md  README_RAG.md  WORKFLOW_DEMO.md  config.dev.yaml  config.prod.yaml  config.yaml  main.py  pyproject.toml  requirements.txt
ai-services/examples/: README.md  complete_workflow_api.py  complete_workflow_cli.py  rag_demo.py
ai-services/src/: __init__.py  cli.py  config.py  ingestion.py
ai-services/src/agents/: __init__.py  orchestrator.py  qa_agent.py  recommendation_agent.py
ai-services/src/api/: __init__.py  documents.py
ai-services/src/document_processor/: __init__.py  chunker.py  loader.py  models.py
ai-services/src/embeddings/: __init__.py  service.py
ai-services/src/prompts/: templates.py
ai-services/src/rag/: embeddings.py  generator.py  retriever.py
ai-services/src/vector_store/: client.py
ai-services/test_data/: engineering_best_practices.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: chat.py  modules.py  progress.py  recommendations.py  users.py
backend/app/core/: config.py  security.py
backend/app/models/: module.py  progress.py  user.py
backend/app/schemas/: module.py  progress.py  user.py
database/: init.sql
docs/: RAG_PIPELINE.md
frontend/: README.md  index.html  package-lock.json  package.json
scripts/: seed-data.ps1  seed-data.sh  setup.sh  (+4 more)
(+22 files in other folders)
